log
Tue, Mar 18, 2025 12:30:21 PM: 
 tests:  0|4
total_score: 10/70
3f6cb15
Tue, Mar 18, 2025  1:11:14 PM: 
 exercises.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:49:7: error: implicit declaration of function 'push_back' [-Werror=implicit-function-declaration]
       push_back(L, &elemento);
       ^~~~~~~~~
exercises.c: In function 'sumaLista':
exercises.c:60:11: error: dereferencing pointer to incomplete type 'List {aka struct List}'
    while(L->current != NULL){
           ^~
exercises.c:61:29: error: implicit declaration of function 'firts' [-Werror=implicit-function-declaration]
       int *elemento = (int*)firts(L);
                             ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
806e0c4
Tue, Mar 18, 2025  2:42:46 PM: 
 exercises.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:49:7: error: implicit declaration of function 'pushback' [-Werror=implicit-function-declaration]
       pushback(L, &elemento);
       ^~~~~~~~
exercises.c: In function 'sumaLista':
exercises.c:62:10: error: 'true' undeclared (first use in this function)
    while(true){
          ^~~~
exercises.c:62:10: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:64:17: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       *elemento = (int*)next(L);
                 ^
cc1.exe: all warnings being treated as errors
Compilation failed
a253a91
Tue, Mar 18, 2025 11:49:50 PM: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
b455047
Wed, Mar 19, 2025 12:11:21 AM: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:62:20: error: comparison between pointer and integer [-Werror]
    while(*elemento != NULL){
                    ^~
cc1.exe: all warnings being treated as errors
Compilation failed
36c4949
